--- a/style.css
+++ b/style.css
@@ -1,147 +1,448 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  padding-top: 85px;
+  padding-top: 120px;
 }
 
 .navbar {
-  box-shadow: 0px 4px 7px lightgrey;
-  background-image: linear-gradient(
-    to right,
-    rgb(90, 167, 214),
-    rgb(175, 80, 170)
-  );
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
-.nav-cont {
-  padding: 10px;
+.nav-one {
+  padding: 0px 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  gap: 30px;
   align-items: center;
+  background-image: linear-gradient(
+    to right,
+    rgb(255, 255, 255),
+    rgb(255, 255, 163)
+  );
 }
 
-.nav-title h1 {
+.one-title {
+  padding: 10px;
   text-align: center;
+}
+
+.one-title h1 {
+  font-size: 32px;
+  padding: 2px;
   font-family: "Great Vibes", cursive;
-  color: rgb(72, 10, 103);
+  color: rgb(136, 10, 10);
 }
 
-.nav-title p {
-  text-align: center;
+.one-title p {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(176, 159, 3);
 }
 
-.search {
-  width: 500px;
-  border: 1px solid black;
+.one-search {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid black;
+  width: 400px;
+  max-width: 100%;
+  padding: 0px 10px;
   background-color: white;
-  padding: 10px;
-  border-radius: 20px;
-  font-size: 20px;
 }
 
-.search input {
-  width: 100%;
+.one-search input {
   border: none;
+  width: 100%;
+  padding: 10px;
 }
 
-.search input:focus {
+.one-search i {
+  padding-left: 10px;
+  cursor: pointer;
+}
+.one-search input:focus {
   outline: none;
 }
 
-.search i {
-  cursor: pointer;
-  transition: 0.2s;
-}
-
-.search i:hover {
-  transform: scale(1.05);
-}
-
-.toggle {
-  position: relative;
-}
-
-#menu-icon {
-  display: none;
-  transition: 0.3s;
-  cursor: pointer;
-}
-
-#menu-icon:hover {
-  transform: scale(1.05);
-}
-
-.menu-toggle {
-  padding: 2px;
-  width: 250px;
-  background-color: rgb(162, 162, 162);
+.one-tags {
   display: flex;
   align-items: center;
-  flex-direction: column;
+}
+
+.one-tags p {
+  padding: 10px;
+  font-size: 16px;
+  margin: 2px;
+  transition: 0.5s;
+  border-radius: 15px;
+}
+.one-tags p:hover {
+  background-color: rgb(210, 210, 112);
+}
+
+.one-tags a {
+  text-decoration: none;
+  color: black;
+}
+
+.one-tags a:hover {
+  color: white;
+}
+
+.one-fonts {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 20px;
+}
+
+.font-profile {
+  padding: 10px;
+  position: relative;
+  cursor: pointer;
+}
+
+.font-profile:hover {
+  color: rgb(131, 111, 0);
+}
+
+.font-profile:hover .hidden {
+  display: block;
+}
+
+.profile-toggle {
+  padding: 20px;
   position: absolute;
+  z-index: 8;
   top: 35px;
-  right: 0;
-  z-index: 2;
+  right: 0px;
+  width: 200px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 4px lightgray;
+  color: rgb(0, 0, 0);
 }
 
 .hidden {
   display: none;
 }
 
-.menu-toggle p {
-  background-color: gray;
-  width: 100%;
+.profile-toggle p {
+  padding: 15px 10px;
+  border-bottom: 1px solid rgb(94, 92, 92);
+  transition: 0.4s;
+}
+
+.profile-toggle p:hover {
+  background-color: grey;
+}
+
+.profile-toggle span {
+  padding: 7px 0px;
+  font-size: 12px;
+}
+
+.font-menu {
   padding: 10px;
-  text-align: center;
-  font-size: 20px;
+  position: relative;
   cursor: pointer;
-  transition: 0.3s;
+}
+
+.font-menu:hover {
+  color: rgb(131, 111, 0);
+}
+
+.font-menu:hover .hidden {
+  display: block;
+}
+
+.menu-toggle {
+  padding: 20px;
+  position: absolute;
+  z-index: 8;
+  top: 35px;
+  right: 0px;
+  width: 200px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 4px lightgray;
+  color: rgb(0, 0, 0);
+}
+
+.menu-toggle p {
+  padding: 15px 10px;
+  border-bottom: 1px solid rgb(94, 92, 92);
+  transition: 0.4s;
 }
 
 .menu-toggle p:hover {
-  background-color: lightgray;
+  background-color: grey;
 }
 
-.menu-toggle a {
-  text-decoration: none;
-  color: white;
+.font-cart {
+  padding: 10px;
+  position: relative;
+  cursor: pointer;
 }
 
-.menu {
+.font-cart:hover {
+  color: rgb(131, 111, 0);
+}
+
+.font-cart:hover .hidden {
+  display: block;
+}
+
+.cart-toggle {
+  padding: 20px;
+  position: absolute;
+  z-index: 8;
+  top: 35px;
+  right: 0px;
+  width: 200px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 4px lightgray;
+  color: rgb(0, 0, 0);
+}
+
+.cart-toggle p {
+  padding: 7px 10px;
+  border-bottom: 1px solid rgb(94, 92, 92);
+}
+
+.nav-two {
+  padding: 10px 40px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 15px;
-  padding: 5px;
+  gap: 40px;
+  flex-wrap: wrap;
+  background-image: linear-gradient(
+    to left,
+    rgb(255, 255, 255),
+    rgb(255, 255, 163)
+  );
+  box-shadow: 0px 2px 5px rgb(213, 213, 213);
 }
 
-.menu a {
-  text-decoration: none;
-  color: white;
-  transition: 0.3s;
-  padding: 8px;
-  border-radius: 10px;
+.two-men {
+  position: relative;
+  cursor: pointer;
 }
 
-.menu a:hover {
-  transform: scale(1.03);
-  background-color: rgb(247, 227, 255);
-  color: rgb(72, 10, 103);
+.two-men h6 {
+  font-size: 15px;
+}
+
+.men-opt {
+  width: 200px;
+  background-color: white;
+  box-shadow: 0px 2px 4px lightgray;
+  position: absolute;
+  left: 0;
+  top: 30px;
+  z-index: 9;
+}
+
+.men-opt p {
+  padding: 10px;
+  border-bottom: 1px solid rgb(232, 232, 232);
+  margin: 0px 10px;
+  transition: 0.4s;
+}
+
+.men-opt p:hover {
+  background-color: lightgray;
+  color: rgb(169, 0, 0);
+}
+
+.two-men:hover .hidden {
+  display: block;
+}
+
+.two-kid {
+  position: relative;
+  cursor: pointer;
+}
+
+.two-kid h6 {
+  font-size: 15px;
+}
+
+.kid-opt {
+  width: 200px;
+  background-color: white;
+  box-shadow: 0px 2px 4px lightgray;
+  position: absolute;
+  z-index: 9;
+  left: 0;
+  top: 30px;
+}
+
+.kid-opt p {
+  padding: 10px;
+  border-bottom: 1px solid rgb(232, 232, 232);
+  margin: 0px 10px;
+  transition: 0.4s;
+}
+
+.kid-opt p:hover {
+  background-color: lightgray;
+  color: rgb(169, 0, 0);
+}
+
+.two-kid:hover .hidden {
+  display: block;
+}
+
+.two-popular {
+  position: relative;
+  cursor: pointer;
+}
+
+.two-popular h6 {
+  font-size: 15px;
+}
+
+.pop-opt {
+  width: 200px;
+  background-color: white;
+  box-shadow: 0px 2px 4px lightgray;
+  position: absolute;
+  z-index: 9;
+  left: 0;
+  top: 30px;
+}
+
+.pop-opt p {
+  padding: 10px;
+  border-bottom: 1px solid rgb(232, 232, 232);
+  margin: 0px 10px;
+  transition: 0.4s;
+}
+
+.pop-opt p:hover {
+  background-color: lightgray;
+  color: rgb(169, 0, 0);
+}
+
+.two-popular:hover .hidden {
+  display: block;
+}
+
+.two-accesories {
+  position: relative;
+  cursor: pointer;
+}
+
+.two-accesories h6 {
+  font-size: 15px;
+}
+
+.acc-opt {
+  width: 200px;
+  background-color: white;
+  box-shadow: 0px 2px 4px lightgray;
+  position: absolute;
+  z-index: 9;
+  left: 0;
+  top: 30px;
+}
+
+.acc-opt p {
+  padding: 10px;
+  border-bottom: 1px solid rgb(232, 232, 232);
+  margin: 0px 10px;
+  transition: 0.4s;
+}
+
+.acc-opt p:hover {
+  background-color: lightgray;
+  color: rgb(169, 0, 0);
+}
+
+.two-accesories:hover .hidden {
+  display: block;
+}
+
+.two-foots {
+  position: relative;
+  cursor: pointer;
+}
+
+.two-foots h6 {
+  font-size: 15px;
+}
+
+.foot-opt {
+  width: 200px;
+  background-color: white;
+  box-shadow: 0px 2px 4px lightgray;
+  position: absolute;
+  z-index: 9;
+  right: 0;
+  top: 30px;
+}
+
+.foot-opt p {
+  padding: 10px;
+  border-bottom: 1px solid rgb(232, 232, 232);
+  margin: 0px 10px;
+  transition: 0.4s;
+}
+
+.foot-opt p:hover {
+  background-color: lightgray;
+  color: rgb(169, 0, 0);
+}
+
+.two-foots:hover .hidden {
+  display: block;
+}
+
+.two-women {
+  position: relative;
+  cursor: pointer;
+}
+
+.two-women h6 {
+  font-size: 15px;
+}
+
+.women-opt {
+  width: 200px;
+  box-shadow: 0px 2px 4px lightgray;
+  background-color: white;
+  position: absolute;
+  z-index: 9;
+  right: 0;
+  top: 30px;
+}
+
+.women-opt p {
+  padding: 10px;
+  border-bottom: 1px solid rgb(232, 232, 232);
+  margin: 0px 10px;
+  transition: 0.4s;
+}
+
+.women-opt p:hover {
+  background-color: lightgray;
+  color: rgb(169, 0, 0);
+}
+
+.two-women:hover .hidden {
+  display: block;
+}
+
+.nav-two h6:hover {
+  border-bottom: 2px solid rgb(109, 7, 7);
 }
 
 .sec-image {
-  margin-top: 20px;
   display: flex;
   justify-content: center;
 }
@@ -161,37 +462,6 @@ body {
   object-fit: cover;
 }
 
-.angle-left {
-  left: 20px;
-}
-
-.angle-right {
-  right: 20px;
-}
-
-.angle-left,
-.angle-right {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  transition: 0.3s;
-  color: white;
-  background: rgba(0, 0, 0, 0.3);
-  padding: 10px;
-  border-radius: 50%;
-}
-
-.angle-left:hover {
-  color: darkblue;
-  transform: translateY(-50%) scale(1.1);
-}
-
-.angle-right:hover {
-  color: darkblue;
-  transform: translateY(-50%) scale(1.1);
-}
-
 .sec-brand {
   margin-top: 30px;
   padding-left: 20px;
@@ -202,7 +472,7 @@ body {
   text-align: left;
   font-size: 30px;
   padding-bottom: 30px;
-  color: rgb(30, 94, 143);
+  color: rgb(136, 0, 0);
 }
 
 .brand-logo {
@@ -232,7 +502,7 @@ body {
 
 .sec-about h1 {
   padding-bottom: 15px;
-  color: rgb(30, 94, 143);
+  color: rgb(136, 0, 0);
 }
 
 .about-container {
@@ -256,7 +526,7 @@ body {
 .cont-box i {
   font-size: 30px;
   margin-bottom: 5px;
-  color: rgb(30, 94, 143);
+  color: rgb(136, 0, 0);
 }
 
 .cont-box h4 {
@@ -269,7 +539,7 @@ body {
 
 .sec-new h1 {
   padding-bottom: 10px;
-  color: rgb(30, 94, 143);
+  color: rgb(136, 0, 0);
 }
 
 .araival-container {
@@ -297,15 +567,14 @@ body {
 .araival-list button {
   padding: 10px;
   border: none;
-  background-color: rgb(30, 94, 143);
-  color: white;
+  background-color: rgb(240, 231, 133);
+  color: rgb(108, 3, 3);
   cursor: pointer;
   transition: 0.3s;
 }
 
 .araival-list button:hover {
-  background-color: rgb(57, 120, 169);
-  box-shadow: 0px 4px 6px rgb(129, 185, 228);
+  transform: scale(1.03);
 }
 
 .sec-wanted {
@@ -314,7 +583,7 @@ body {
 
 .sec-wanted h1 {
   padding-bottom: 10px;
-  color: rgb(30, 94, 143);
+  color: rgb(136, 0, 0);
 }
 
 .wanted-container {
@@ -342,8 +611,8 @@ body {
 
 .seller {
   padding: 3px;
-  background-color: rgb(181, 12, 12);
-  color: white;
+  background-color: rgb(247, 247, 247);
+  color: rgb(143, 0, 0);
   position: absolute;
   top: 5px;
   left: 5px;
@@ -377,19 +646,20 @@ body {
 .wanted-list button {
   padding: 10px;
   border: none;
-  background-color: rgb(30, 94, 143);
-  color: white;
+  font-weight: bold;
+  background-color: rgb(240, 231, 133);
+  color: rgb(118, 1, 1);
   cursor: pointer;
   transition: 0.3s;
 }
 
 .wanted-list button:hover {
-  background-color: rgb(57, 120, 169);
-  box-shadow: 0px 4px 6px rgb(129, 185, 228);
+  transform: scale(1.03);
 }
 
 .sec-offer {
   padding: 20px;
+  margin-top: 30px;
 }
 
 .offer-container {
@@ -433,7 +703,9 @@ body {
 
 .sec-nostraapp {
   padding: 0;
-  margin-top: 10px;
+  margin-top: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .nostra-container {
@@ -687,16 +959,20 @@ body {
 
 .footer-copyrights {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   align-items: center;
   gap: 30px;
 }
 
-.footer-copyrights img{
-    width: 100px;
+.footer-copyrights img {
+  width: 100px;
 }
 
 @media screen and (min-width: 1200px) {
+  .font-menu {
+    display: none;
+  }
+
   .offer-container {
     height: 300px;
   }
@@ -708,16 +984,8 @@ body {
 }
 
 @media screen and (max-width: 980px) {
-  .menu {
+  .one-tags {
     display: none;
-  }
-
-  #menu-icon {
-    display: block;
-  }
-
-  .search {
-    width: 300px;
   }
 
   .image-opt {
@@ -847,30 +1115,42 @@ body {
     height: 18px;
   }
 
-  .footer-1{
+  .footer-1 {
     display: none;
   }
 
-  .footer-copyrights img{
+  .footer-copyrights img {
     width: 70px;
   }
 
-  .footer-copyrights p{
+  .footer-copyrights p {
     font-size: 14px;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .menu {
+  .one-title p {
+    display: none;
+  }
+  .one-search {
     display: none;
   }
 
-  .search {
+  .one-tags {
     display: none;
   }
 
-  #menu-icon {
-    display: block;
+  .one-fonts {
+    gap: 8px;
+  }
+
+  .nav-one {
+    padding: 5px;
+    margin: o;
+  }
+
+  .nav-two {
+    display: none;
   }
 
   .image-opt {
@@ -1056,175 +1336,257 @@ body {
     height: 16px;
   }
 
-  .footer-1{
+  .footer-1 {
     display: none;
   }
 
-  .footer-copyrights img{
+  .footer-copyrights img {
     width: 50px;
   }
 
-  .footer-copyrights p{
+  .footer-copyrights p {
     font-size: 12px;
   }
 }
 
-/* ===========================================
-   PERFECT SMALL MOBILE VIEW — MAX 360PX
-   =========================================== */
 @media screen and (max-width: 360px) {
+  .one-search,
+  .one-tags,
+  .nav-two,
+  .footer-1 {
+    display: none !important;
+  }
 
-    /* ----------- FIX OVERFLOW / SLIDING ----------- */
-    html, body {
-        width: 100%;
-        overflow-x: hidden;
-    }
+  .nav-one {
+    padding: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    * {
-        box-sizing: border-box;
-        max-width: 100%;
-    }
+  .one-title p {
+    display: none;
+  }
 
-    img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        display: block;
-    }
+  .one-fonts {
+    gap: 6px;
+  }
 
-    section, div {
-        overflow-x: hidden;
-    }
+  .image-opt img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+  }
 
-    /* ----------- NAVBAR ----------- */
-    .navbar {
-        padding: 5px;
-    }
+  .sec-brand h1 {
+    font-size: 16px;
+    text-align: center;
+  }
 
-    .nav-cont img {
-        width: 110px;
-    }
+  .brand-logo {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    justify-items: center;
+  }
 
-    #menu-icon {
-        font-size: 22px;
-    }
+  .brand-logo img {
+    width: 70px;
+    height: 70px;
+    object-fit: contain;
+  }
 
-    /* ----------- BANNER / SLIDER ----------- */
-    .banner-container {
-        width: 100%;
-        height: 300px;
-        overflow: hidden;
-    }
+  .sec-about h1 {
+    text-align: center;
+    font-size: 16px;
+  }
 
-    .slider-container img {
-        width: 100%;
-        height: 260px;
-        object-fit: cover;
-        display: block;
-    }
+  .about-container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
 
-    .slider-arrow {
-        font-size: 20px;
-        padding: 5px;
-    }
+  .sec-new h1 {
+    font-size: 16px;
+    text-align: center;
+  }
 
-    .banner-content h3 {
-        font-size: 20px;
-    }
+  .araival-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
 
-    .banner-content p {
-        font-size: 12px;
-        line-height: 16px;
-    }
+  .araival-list img {
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+  }
 
-    .banner-content button {
-        font-size: 12px;
-        padding: 6px 18px;
-    }
+  .araival-list button {
+    font-size: 9px;
+    padding: 4px 6px;
+  }
 
-    /* ----------- ARRIVAL SECTION ----------- */
-    .arrival-container {
-        width: 100%;
-        padding: 10px;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-    }
+  .sec-wanted h1 {
+    font-size: 16px;
+    text-align: center;
+  }
 
-    .arrival-container .arrival {
-        padding-bottom: 20px;
-    }
+  .wanted-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 0 5px;
+  }
 
-    .arrival-container img {
-        height: 110px;
-    }
+  .wanted-list img {
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+  }
 
-    /* ----------- WANTED SECTION ----------- */
-    .wanted-collection {
-        width: 100%;
-        padding: 10px;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-    }
+  .seller {
+    font-size: 9px;
+  }
 
-    .wanted-list img {
-        height: 110px;
-    }
+  .wanted-like {
+    bottom: 25px;
+    font-size: 14px;
+  }
 
-    .react-icon {
-        font-size: 16px;
-    }
+  .wanted-list button {
+    padding: 4px 6px;
+    font-size: 9px;
+  }
 
-    /* ----------- OFFER SECTION ----------- */
-    .offer-container img {
-        height: 200px;
-    }
+  .sec-offer {
+    padding: 8px;
+  }
 
-    .offer-alert h1 {
-        font-size: 20px;
-    }
+  .offer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    height: 130px;
+  }
 
-    .offer-alert h2 {
-        font-size: 14px;
-    }
+  .offer-container img {
+    width: 45%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+  }
 
-    .offer-alert button {
-        font-size: 12px;
-        padding: 6px 20px;
-    }
+  .offer-alert {
+    width: 50%;
+    text-align: left;
+  }
 
-    /* ----------- NOSTRA APP SECTION ----------- */
- .sec-nostraapp{
-  display: none;
- }
+  .offer-alert h1 {
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
 
-    /* ----------- ABOUT SECTION ----------- */
-    .sec-about h1 {
-        font-size: 20px;
-    }
+  .offer-alert h2 {
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
 
-    .about-container {
-        flex-direction: column;
-        gap: 15px;
-        padding: 10px;
-    }
+  .offer-alert button {
+    padding: 6px 10px;
+    font-size: 10px;
+  }
 
-    .cont-box h4 {
-        font-size: 14px;
-    }
+  .sec-nostraapp {
+    padding: 10px 0;
+    margin: 0 !important;
+  }
 
-    .cont-box p {
-        font-size: 12px;
-        line-height: 16px;
-    }
+  .nostra-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: auto;
+    padding: 5px 0;
+  }
 
-    /* ----------- FOOTER ----------- */
-    footer {
-        padding: 20px;
-    }
+  .nostra-shop {
+    width: 40%;
+  }
 
-    footer p {
-        font-size: 12px;
-        text-align: center;
-    }
+  .nostra-shop img {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 6px;
+  }
+
+  .nostra-content {
+    width: 60%;
+    overflow: hidden;
+  }
+
+  .nostra-content h1 {
+    font-size: 12px;
+    line-height: 14px;
+    margin-bottom: 6px;
+    word-wrap: break-word;
+  }
+
+  .nostra-section {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+  }
+
+  .nostra-section p {
+    font-size: 10px;
+  }
+
+  .nostra-section img {
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
+  }
+
+  .nostra-download {
+    margin-top: 5px;
+  }
+
+  .download-title {
+    font-size: 10px;
+    margin-bottom: 4px;
+  }
+
+  .download-img {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 9px;
+    margin-bottom: 3px;
+  }
+
+  .download-img img {
+    width: 18px;
+    height: 18px;
+    object-fit: contain;
+    border-radius: 3px;
+  }
+
+  .footer-copyrights {
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  .footer-copyrights img {
+    width: 60px;
+  }
+
+  .footer-copyrights p {
+    font-size: 11px;
+  }
 }
 
+/* HOME-PAGE-STYLES-COMPLETED */
